Fix title description size and contact me header size on mobile

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -29,6 +29,12 @@ $secondary-font: 'Grand Hotel', cursive;
     font-size: 3.5rem;
 }
 
+@media(max-width: 768px) {
+    .section-title {
+        font-size: 3rem;
+    }
+}
+
 
 body {
     font-family: $primary-font;
@@ -151,8 +157,8 @@ button:focus {outline:0;}
     display: flex;
     justify-content: center;
     align-items: center;
-    margin-top: 5%;
-    margin-bottom: 5%;
+    padding-top: 15%;
+    padding-bottom: 10%;
     text-align: center;
 }
 
